--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,35 +2,41 @@ version: "3"
 
 services:
   express:
+    restart: always
     ports:
       - 3333:3333
     build:
       context: ./express-app
       dockerfile: Dockerfile
     volumes:
-      - ./express-app:/usr/app
-      - /usr/app/node_modules
+      - ./express-app:/usr/src/app
+      - /usr/src/app/node_modules
     env_file:
-      - .env
+      - ./express-app/.env
 
   next:
+    restart: always
     ports:
       - 3000:3000
     build:
       context: ./nextapp
       dockerfile: Dockerfile
     volumes:
-      - ./nextapp:/usr/app
-      - /usr/app/node_modules
-      - /usr/app/.next
-    env_file:
-      - .env
+      - ./nextapp:/usr/src/app
+      - /usr/src/app/node_modules
+      - /usr/src/app/.next
 
   postgres:
+    restart: always
     image: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: senha
-      POSTGRES_DB: postgres
+      POSTGRES_DB: app
+      PGDATABASE: postgres
+      PGUSER: app
+      PGPASSWORD: senha
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
+    ports:
+      - "3330:5432"
